[package]
name = "thermo-online"
version = "0.1.0"
authors = ["Max Krummenacher <maxkrummenacher@bluewin.ch>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

phases = { git = "https://github.com/max-kay/phases" }
gif = "0.12.0"
zip = { version = "0.6.6", default-features = false, features = [ "deflate" ]}
getrandom = { version = "0.2.10", features = ["js"] }

[dependencies.web-sys]
version = "0.3"
features = ["console"]


[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"
