[package]
name = "thermo-online"
version = "0.1.0"
authors = ["Max Krummenacher <maxkrummenacher@bluewin.ch>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
phases = { git = "https://github.com/max-kay/phases" }
gif = "0.12.0"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
getrandom = { version = "0.2.10", features = ["js"] }

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[profile.release]
opt-level = "s"
